--- a/ClassTaskTests/ClassTaskTests.csproj
+++ b/ClassTaskTests/ClassTaskTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Task1\ClassTask.csproj" />
+    <ProjectReference Include="..\ClassTask\ClassTask.csproj" />
   </ItemGroup>
 
 </Project>
