--- a/Training1_Tests/Training1_Tests.csproj
+++ b/Training1_Tests/Training1_Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Training_1\Training_1.csproj" />
+    <ProjectReference Include="..\Training1\Training1.csproj" />
   </ItemGroup>
 
 </Project>
