--- a/TaskRunner/TaskRunner.csproj
+++ b/TaskRunner/TaskRunner.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Training1\Training1.csproj" />
+    <ProjectReference Include="..\Training1\Training_1.csproj" />
   </ItemGroup>
 
 </Project>
