--- a/Training_1_Tests/Training_1_Tests.csproj
+++ b/Training_1_Tests/Training_1_Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Training1\Training1.csproj" />
+    <ProjectReference Include="..\Training_1\Training_1.csproj" />
   </ItemGroup>
 
 </Project>
