added ref for a training 1 csproj

--- a/TaskRunner/TaskRunner.csproj
+++ b/TaskRunner/TaskRunner.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Training1\Training_1.csproj" />
+    <ProjectReference Include="..\Training_1\Training_1.csproj" />
+    <ProjectReference Include="..\Training_2\Training_2.csproj" />
   </ItemGroup>
 
 </Project>
