--- a/TaskRunner/TaskRunner.csproj
+++ b/TaskRunner/TaskRunner.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Training_1\Training_1.csproj" />
     <ProjectReference Include="..\Training_2\Training_2.csproj" />
+    <ProjectReference Include="..\Training_3\Training_3.csproj" />
   </ItemGroup>
 
 </Project>
